# vcptoolbox-auto-updater

./: .gitignore  AGENTS.md  PLAN-blue-green-deployment.md  README.md  config.example.yaml  config.yaml  logs  pyproject.toml
scripts/: install_service.ps1
src/vcptoolbox_updater/: __init__.py  __main__.py  cli.py  config.py  git_ops.py  pm2_ops.py  scheduler.py  service.py  update_report.py  utils.py
src/vcptoolbox_updater/notifications/: __init__.py  base.py  email.py  feishu.py  wecom.py
src/vcptoolbox_updater/tui/: __init__.py  app.py  i18n.py
src/vcptoolbox_updater/tui/screens/: log_viewer.py  main_menu.py  manual_update.py  service_manager.py
tests/: __init__.py  test_cli.py  test_config.py  test_git_ops.py  test_notifications.py  test_pm2_ops.py  test_scheduler.py  test_service.py  test_utils.py
tests/test_tui/: test_app.py  test_i18n.py  test_log_viewer.py  test_manual_update.py  test_service_manager.py
