[project]
name = "vcptoolbox-updater"
version = "1.0.0"
description = "7x24 auto-updater for VCPToolBox with PM2 management"
requires-python = ">=3.11"
dependencies = [
    "pywin32>=308",
    "apscheduler>=3.11.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
    "click>=8.1.0",
    "lark-oapi>=1.4.0",
    "requests>=2.32.0",
]

[project.scripts]
vcptoolbox-updater = "vcptoolbox_updater.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vcptoolbox_updater"]

[dependency-groups]
dev = ["pytest>=8.0"]